# ukechords

./: .coveragerc  .dprettyrc  .flake8  .gitignore  .mypy.ini  .pylintrc  .python-version  LICENSE  README.md  check_types.sh  config.py  config_test.py  conftest.py  console_test.py  git-pre-recieve-hook  ident  ident.py  pyproject.toml  render.py  render_test.py  requirements-dev.txt  requirements.txt  run_ci.sh  run_tests.sh  theory.py  theory_extra_qualities_test.py  theory_missing_qualities_test.py  theory_test.py  theory_test_pre_add_qualities.py  uketestconfig.py  util_test.py  utils.py
.github/workflows/: detect-fixups.yml  test.yml
src/ukechords/: __init__.py  cache.py  config.py  conftest.py  errors.py  ident.py  render.py  theory.py  theory_basic.py  types.py  utils.py
src/ukechords/cli/: ident.py  render.py
tests/: cache_test.py  config_test.py  fake_pool.py  ident_test.py  pychord_missing_qualities_test.py  render_test.py  theory_basic_test.py  theory_missing_qualities_test.py  theory_test.py  uketestconfig.py  util_test.py
tests/cli/: ident_test.py  render_test.py
util/: git-flag-autosquash  git-pre-recieve-hook  run_ci.sh  run_tests.sh
