[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ukechords"
authors = [{name = "Jeremy Nickurak", email = "jeremy@nickurak.ca"}]
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pychord>=1.2.2",
    "pyxdg",
]
[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "mypy",
    "pyflakes",
    "pylint",
    "pylint-pytest",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Home = "https://nickurak.ca/ukechords/"

[project.scripts]
ident = "ukechords.ident:main"

[tool.black]
line-length = 100
