[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ukechords"
authors = [{name = "Jeremy Nickurak", email = "jeremy@nickurak.ca"}]
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pychord>=1.2.2",
    "pyxdg",
]
[dependency-groups]
dev = [
    "black",
    "coverage",
    "mypy",
    "pylint",
    "pylint-pytest",
    "pytest>=9.0.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[project.urls]
Home = "https://nickurak.ca/ukechords/"

[project.scripts]
ident = "ukechords.cli.ident:main"

[tool.black]
line-length = 100

[tool.pytest]
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
nested-string-quote-style = "preferred"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["F811", "F401"]

